# SH-D3D11

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Platform/: CMakeLists.txt
Platform/InputsBase/: CMakeLists.txt
Platform/InputsBase/Include/: ALowInput.h  DInputAnalog.h  DInputButton.h  DInputMousePos.h  EInputButton.h  EInputState.h  ELowKeyboard.h  ELowMouse.h  XInputEntry.h
Platform/InputsBase/Source/: ALowInput.cc  DInputAnalog.cc  DInputButton.cc  DInputMousePos.cc  XInputEntry.cc
Platform/NativePlatformBase/: CMakeLists.txt
Platform/NativePlatformBase/Include/: ABtResourceBase.h  ADebugBase.h  AEngineBase.h  AHandlesBase.h  APlatformBase.h  AProfilingBase.h  DWindowHandle.h  EBtResource.h  EPlatform.h  PWindowCreationDescriptor.h
Platform/NativePlatformBase/Source/: ABtResourceBase.cc  ADebugBase.cc  AEngineBase.cc  AHandleBase.cc  APlatformBase.cc  XExternEngine.cc
Platform/PlatformWin32/: CMakeLists.txt
Platform/PlatformWin32/Include/: DWin32PostMessage.h  FBtResourceHandle.h  FWindowsDebug.h  FWindowsHandles.h  FWindowsLowInput.h  FWindowsPlatform.h  FWindowsProfiling.h  PLowInputKeyboard.h  PLowInputMouseBtn.h  PLowInputMousePos.h  XDisableWinMacro.h
Platform/PlatformWin32/Source/: FBtResourceHandle.cc  FWindowsDebug.cc  FWindowsHandles.cc  FWindowsLowInput.cc  FWindowsPlatform.cc  FWindowsProfiling.cc  WinMain.cc
Samples/: CMakeLists.txt
Samples/0_HelloWorld/: CMakeLists.txt
Samples/0_HelloWorld/Source/: Entry.cc
Samples/1_Box/: CMakeLists.txt
Samples/1_Box/Include/: HelperMacro.h  IComBorrow.inl  IComOwner.h  IComOwner.inl  XBox.h  XTriangle.h
Samples/1_Box/Resource/: Shader.fx
Samples/1_Box/Source/: Entry.cc  FGuiHelloWorld.cc
Samples/1_ImGui/: CMakeLists.txt
Samples/1_ImGui/Include/: FGuiHelloWorld.h  FGuiMainMenu.h  FGuiProfiling.h
Samples/1_ImGui/Source/: Entry.cc  FGuiHelloWorld.cc  FGuiProfiling.cc  XPlatform.cc
Samples/1_Triangle/: CMakeLists.txt
Samples/1_Triangle/Source/: Entry.cc
Samples/2_ConstantBuff/: CMakeLists.txt
Samples/2_ConstantBuff/Include/: FObjBox.h  FObjCamera.h  FObjTriangle.h  XBuffer.h  XModelBox.h  XPlatform.h
Samples/2_ConstantBuff/Resource/: Shader.fx
Samples/2_ConstantBuff/Source/: FGuiWindow.cc  FObjBox.cc  FObjTriangle.cc  XEntry.cc
Samples/2_ImGui/: CMakeLists.txt
Samples/2_ImGui/Include/: FGuiAbout.h  FGuiBackground.h  FGuiHelloWorld.h  FGuiMainMenu.h
Samples/2_ImGui/Source/: Entry.cc  FGuiAbout.cc  FGuiBackground.cc  FGuiHelloWorld.cc  FGuiMainMenu.cc  FGuiProfiling.cc
Samples/3_ConstantBuff/: CMakeLists.txt
Samples/3_ConstantBuff/Include/: FGuiDescription.h  XCBuffer.h  XTriangle.h
Samples/3_ConstantBuff/Source/: FGuiDescription.cc  FGuiWindow.cc  XEntry.cc  XLocalCommon.cc
Samples/3_HeightMap/: CMakeLists.txt
Samples/3_HeightMap/Include/: DDynamicGrid2D.h  DGridXIterator.h  DGridYIterator.h  DGridYSubscript.h  FGuiWindow.h  FObjCamera.h  FObjTerrain.h  MRandomMap.h  XCBuffer.h  XLocalCommon.h
Samples/3_HeightMap/Resource/: Shader.fx
Samples/3_HeightMap/Source/: FGuiWindow.cc  FObjCamera.cc  FObjTerrain.cc  MRandomMap.cc  XEntry.cc  XLocalCommon.cc
Samples/Source/: CMakeLists.txt  main.cc
Samples/_Common/: CMakeLists.txt
Samples/_Common/Include/: DGuiNoneModel.h  FD3D11Factory.h  FD3D11TimeContainer.h  FD3D11TimeFragment.h  FD3D11TimeHandle.h  HelperMacro.h  IComBorrow.h  IComOwner.h  IGuiFrame.h  IGuiFrameModel.h  IGuiFrameModel.inl  IGuiModel.h  MGuiManager.h  MGuiManager.inl  MTimeChecker.h  XCommonDebug.h
Samples/_Common/Include/ComWrapper/: IComBorrow.h  IComOwner.h  XComCounter.h
Samples/_Common/Include/Graphics/: MD3D11Resources.h
Samples/_Common/Include/Gui/: EGuiStyle.h
Samples/_Common/Include/Inline/: DD3D11Handle.inl  IComBorrow.inl  IComOwner.inl  XComCounter.inl
Samples/_Common/Include/Object/: AObject.h
Samples/_Common/Include/Profiling/: FCpuTimeHandle.h  FD3D11TimeContainer.h  FD3D11TimeHandle.h  FTimeContainer.h  MTimeChecker.h
Samples/_Common/Include/Resource/: D11DefaultHandles.h  DD3D11Handle.h  DD3DResourceDevice.h  E11SimpleQueryType.h  ED3D11Resc.h
Samples/_Common/Source/: CMakeLists.txt  FCpuTimeHandle.cc  FD3D11Factory.cc  FD3D11TimeContainer.cc  FD3D11TimeFragment.cc  FD3D11TimeHandle.cc  FTimeContainer.cc  IGuiFrame.cc  MGuiManager.cc  MTimeChecker.cc
Samples/_Common/Source/Graphics/: CMakeLists.txt  MD3D11Resources.cc
Samples/_Common/Source/Profiling/: CMakeLists.txt  FCpuTimeHandle.cc  FD3D11TimeContainer.cc  FD3D11TimeFragment.cc  FD3D11TimeHandle.cc  FTimeContainer.cc  MTimeChecker.cc
Samples/_Common/Source/Resource/: CMakeLists.txt  DD3DResourceDevice.cc
src/: main.c
